			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-07-04

	* Updated history of stable releases (file RELEASES).

	2005-07-03

	* Switched t.encoding test to use the POSIX utility cksum,
	  rather than OS-specific utilities such as md5sum or md5.

0.95.2	2005-06-30

	2005-06-29

	* Fix incorrect directory creation revealed by t.bogodir.
	* Use unicode & transaction enable/disable flags to limit
	  'make check' tests being run.

	2005-06-28

	* Fixed buffer allocation error causing problem processing
	  RFC2047 encoded words.
	* Fixed wordlist access problems causing bogotune to
	  incorrectly complain of mixed database encodings.

	2005-06-21

	* Bogofilter programs now use their own locking for transactional
	  databases, to evade the problems with overflowing lock tables,
	  resizing. The database is locked globally, which no longer allows
	  registrations to happen concurrently with read access.

	  The db-lk-max-locks and db-lk-max-objects options and the bf_resize
	  scripts and pages have been removed.

0.95.1	2005-06-26

	* Fixed some wordlist open conflicts in bogotune.
	* Document unicode requirements for 'make check'

	2005-06-25

	* Added unicode processing of encoded tokens.

	2005-06-24

	* Use iso-8859-1 for default charset, rather than us-ascii.

0.95.0	2005-06-20

	* Fix bf_resize bash-isms (let BLAH...) and use POSIX-sh arithmetic
	  expansion $((...)) instead, to fix bf_resize on FreeBSD.
	  Reported by Andrey Chernov.

	2005-06-19

	* New unicode capabilities!

	  - default configuration:
	    . bogofilter auto-detects whether database is using
	      unicode (utf-8) or not.